Fix messages and use new Java 21 features