@@ -5,6 +5,7 @@ import com.nookure.staff.api.Permissions;
 import com.nookure.staff.api.command.Command;
 import com.nookure.staff.api.command.CommandData;
 import com.nookure.staff.api.command.CommandSender;
+import com.nookure.staff.api.config.ConfigurationContainer;
 import com.nookure.staff.api.config.bukkit.partials.messages.note.NoteMessages;
 import com.nookure.staff.api.service.UserNoteService;
 import org.jetbrains.annotations.NotNull;
@@ -20,19 +21,19 @@ public class ToggleShowCommand extends Command {
   @Inject
   private UserNoteService userNoteService;
   @Inject
-  private NoteMessages noteMessages;
+  private ConfigurationContainer<NoteMessages> noteMessages;
 
   @Override
   public void onCommand(@NotNull CommandSender sender, @NotNull String label, @NotNull List<String> args) {
     if (args.isEmpty()) {
-      sender.sendMiniMessage(noteMessages.commands.getToggleShowUsage());
+      sender.sendMiniMessage(noteMessages.get().commands.getToggleShowUsage());
       return;
     }
 
     long id;
 
     try {
-      id = Long.parseLong(args.get(0));
+      id = Long.parseLong(args.getFirst());
     } catch (NumberFormatException e) {
       sender.sendMiniMessage("Invalid note id");
       return;
